<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    tools:context="com.generalmagic.sdk.examples.rangefinder.MainActivity">
    
    <ScrollView
        android:id="@+id/range_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:visibility="gone"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gem_surface"
        app:layout_constraintHeight_percent="0.4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/transport_mode_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/transport_mode"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/big_padding"
                android:singleLine="true"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="@id/transport_mode_spinner"
                app:layout_constraintBottom_toBottomOf="@id/transport_mode_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/transport_mode_spinner"/>

            <Spinner
                android:id="@+id/transport_mode_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/transport_mode_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/range_type_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/range_type"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/big_padding"
                android:singleLine="true"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="@id/range_type_spinner"
                app:layout_constraintBottom_toBottomOf="@id/range_type_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/range_type_spinner"/>

            <Spinner
                android:id="@+id/range_type_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                app:layout_constraintTop_toBottomOf="@id/transport_mode_spinner"
                app:layout_constraintStart_toEndOf="@id/range_type_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/bike_weight_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bike_weight"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/big_padding"
                android:singleLine="true"
                android:ellipsize="end"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/bike_weight_edit_text"
                app:layout_constraintBottom_toBottomOf="@id/bike_weight_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bike_weight_edit_text"/>

            <EditText
                android:id="@+id/bike_weight_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:padding="@dimen/big_padding"
                android:singleLine="true"
                android:ellipsize="end"
                android:background="@drawable/rounded_border_background"
                android:hint="@string/kilograms"
                android:digits="0123456789"
                android:imeOptions="flagNoExtractUi|actionDone"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/range_type_spinner"
                app:layout_constraintStart_toEndOf="@id/bike_weight_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/biker_weight_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/biker_weight"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/big_padding"
                android:singleLine="true"
                android:ellipsize="end"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/biker_weight_edit_text"
                app:layout_constraintBottom_toBottomOf="@id/biker_weight_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/biker_weight_edit_text"/>

            <EditText
                android:id="@+id/biker_weight_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="@dimen/big_padding"
                android:background="@drawable/rounded_border_background"
                android:hint="@string/kilograms"
                android:digits="0123456789"
                android:imeOptions="flagNoExtractUi|actionDone"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/bike_weight_edit_text"
                app:layout_constraintStart_toEndOf="@id/biker_weight_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/range_value_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/range_value"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/big_padding"
                android:singleLine="true"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="@id/range_value_edit_text"
                app:layout_constraintBottom_toBottomOf="@id/range_value_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/range_value_edit_text"/>

            <EditText
                android:id="@+id/range_value_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="@dimen/big_padding"
                android:background="@drawable/rounded_border_background"
                android:digits="0123456789"
                android:imeOptions="flagNoExtractUi|actionDone"
                app:layout_constraintTop_toBottomOf="@id/biker_weight_edit_text"
                app:layout_constraintStart_toEndOf="@id/range_value_text"
                app:layout_constraintEnd_toStartOf="@id/add_button" />

            <TextView
                android:id="@+id/add_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/big_padding"
                android:padding="@dimen/big_padding"
                android:background="@drawable/rounded_border_background"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                android:text="@string/add"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@id/range_value_edit_text"
                app:layout_constraintBottom_toBottomOf="@id/range_value_edit_text"
                app:layout_constraintStart_toEndOf="@id/range_value_edit_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <HorizontalScrollView
                android:id="@+id/current_ranges_scroll_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdgeLength="15dp"
                android:requiresFadingEdge="horizontal"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/range_value_edit_text">

                <LinearLayout
                    android:id="@+id/current_ranges_buttons_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </ScrollView>

    <com.generalmagic.sdk.core.GemSurfaceView
        android:id="@+id/gem_surface"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/range_container"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/gem_surface"
        app:layout_constraintEnd_toEndOf="@id/gem_surface"
        app:layout_constraintStart_toStartOf="@id/gem_surface"
        app:layout_constraintTop_toTopOf="@id/gem_surface" />

</androidx.constraintlayout.widget.ConstraintLayout>
